# pycortex

./: .buildinfo  .codecov.yml  .gitignore  .travis.yml  CITATION.cff  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  RELEASE.md  TODO  __init__.py  align.html  aligner.py  alignment.rst  api_reference_flat.html  changelog.html  chrome_bug.html  colormaps.html  convertmat.m  database.html  database.sql  dataset.html  db.py  defaults.json  drawsurf.py  dumpsql.py  flats.sql  genindex.html  github_deploy_key.enc  index.html  install.html  jgutils.py  loadAllFlats.py  loadAllTRs.py  mixer.py  objects.inv  polyutils.py  py-modindex.html  (+21 more)
.claude/: launch.json  launch_viewer.py
.github/workflows/: build_docs.yml  codespell.yml  install_from_wheel.yml  publish.yml  publish_to_pypi.yml  run_tests.yml
OpenCTM-1.0.3/lib/: Makefile.linux  Makefile.macosx  openctm.c
_downloads/0171ca85d45eca4cef1870c2e499de10/: plot_make_gif.ipynb
_downloads/03727e1a4b42addea2598e45140498aa/: static_with_custom_template.ipynb
_downloads/09288dd002fd14fba94fc085d758d914/: plot_roi_voxel_index_volume.ipynb
_downloads/0f8be1e4c7dbdc2b5c70b92872c6b4bf/: multiple_datasets.ipynb
_modules/: index.html
_modules/cortex/: align.html  (+10 more)
_sources/: align.rst.txt  changelog.rst.txt  colormaps.rst.txt  database.rst.txt  index.rst.txt  segmentation_guide.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  sg_execution_times.html
convert_TR/: convertmat.m  loadAllFlats.py  loadAllTRs.py  parseKathleen.m
cortex/: CITATION.cff  Makefile  __init__.py  align.py  aligner.py  anat.py  appdirs.py  bbr.sch  blender.py  brainctm.py  brainctm.pyx  dartboards.py  database.py  dataset.py  db.py  db.py~  defaults.cfg  drawsurf.py  fmriprep.py  formats.c  formats.py  formats.pyx  formats_old.py  freesurfer.py  mapper.py  masks.py  mayavi_aligner.py  mixer.py  mni.py  mp.py  openctm.c  openctm.pxd  openctm.pyx  options.py  polyutils.py  project.py  quickflat.py  rois.py  segment.py  surfinfo.py  (+17 more)
docs/: Makefile  align.rst  api_reference_flat.rst  changelog.rst  colormap_rst.py  conf.py  database.rst  dataset.rst  index.rst  install.rst  make.bat  mapper.rst  rois.rst  segmentation.rst  segmentation_guide.rst  sg_execution_times.rst  transforms.rst  view.rst
examples/: README.txt
scripts/: dumpcmaps.py  dumpsql.py  make_movie.py  make_test.py  sn_movie_make.py  test_JG_flip.py
tests/: ctm.py  dataset.py  decimate.npz  quickflat.py  spring.py
userguide/: webgl.html
utils/: fsreg2xfm  xfm2fsreg
webgl/: dumpcmaps.py  htmlembed.py  js  mixer.html  serve.py  static.html  template.html  view.py  wngraph.html
webgl_view/: htmlembed.py  index.html  mixer.html  serve.py  static.html  static_template.html  view.py  viewserve.py  wordnet.json
(+445 files in other folders)
