[build-system]
# Minimum requirements for the build system to execute, according to PEP518
# specification.
requires = ["setuptools>=64", "setuptools-scm>=8", "build", "numpy>=1.13.0", "cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycortex"
dynamic = ["authors", "license", "readme", "version", "classifiers", "dependencies"]

[dependency-groups]
dev = [
    {include-group = "test"},
    "mypy",
]
test = [
    "pycortex[headless]",
    "ipykernel>=6.31.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
]
docs = [
    "sphinx",
    "numpydoc",
    "sphinx-gallery",
    "alabaster",
    "nbsphinx",
    "pandoc",
    "ipykernel",
]

[project.optional-dependencies]
headless = [
    "playwright>=1.58.0"
]

[tool.setuptools_scm]
version_file = "cortex/_version.py"
local_scheme = "no-local-version"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.css,*.min.*,*.gii,resources,OpenCTM-1.0.3,filestore,build,_build'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'nd,acount,anormal,fpt,coo,transpart,FO,lins'

[tool.mypy]
allow_redefinition = true
disable_error_code = "import-untyped"
